Ajustes implementações graphql.